core had been added as dependency to sevice

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -12,4 +12,14 @@
     <artifactId>service</artifactId>
 
 
+    <dependencies>
+    <dependency>
+
+        <groupId>keretrendszerBeadando</groupId>
+        <artifactId>core</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+    </dependencies>
+
+
 </project>
