--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>core</module>
         <module>service</module>
+        <module>dao-json</module>
     </modules>
 
 
