--- a/service/pom.xml
+++ b/service/pom.xml
@@ -31,6 +31,11 @@
         <artifactId>core</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.11.0</version>
+        </dependency>
     </dependencies>
 
 
