--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,12 @@
     <modules>
         <module>core</module>
         <module>service</module>
-
-
         <module>dao-json</module>
+        <module>controller</module>
+        <module>web</module>
+
+
+
     </modules>
 
 
