--- a/service/pom.xml
+++ b/service/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.0.pr3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
